# DemakeGame

./: CMakeLists.txt  readme.md
DemakeTetris/: it.sln
DemakeTetris/it/: CMakeLists.txt  DemakeTetris.cpp  DemakeTetris.h  it.cpp  it.vcxproj  it.vcxproj.filters  main.cpp
DemakeTetris/it/x64/Debug/: it.exe.recipe  it.ilk  it.vcxproj.FileListAbsolute.txt  vc143.idb
DemakeTetris/it/x64/Debug/it.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  it.lastbuildstate  it.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/glad/: glad.h
src/: CMakeLists.txt  glad.c  main.cpp
tests/: CMakeLists.txt
