find_package(benchmark)
if ( benchmark_FOUND )
	add_subdirectory( project-benchmark )
else()
	message(MESSAGE "Benchmark was not loaded, you will not have unit test support")
endif()

find_package(GTest)
if ( GTest_FOUND )
	add_subdirectory( project-unit )
else()
	message(MESSAGE "GTest was not loaded, you will not have unit test support")
endif()
